--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "bcrypt>=5.0.0",
     "boto3>=1.42.39",
     "fastapi>=0.128.0",
+    "gunicorn>=25.0.1",
     "langchain-core>=1.2.7",
     "langchain-openai>=1.1.7",
     "langgraph>=1.0.7",
