--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     branch: main
     rootDir: app
     buildCommand: uv sync --frozen && uv cache prune --ci
-    startCommand: gunicorn main:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000
+    startCommand: uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 1
     envVars:
       - key: APP_ENV
         sync: false
